# ocr_logisticregression_classifier

./: .gitignore  README.md  features.py  labels.csv  model.joblib  ocr.py  predict.py  pyproject.toml  requirements.txt  spam_classifier_v1.joblib  train.py  vectorize.py
